# duckdb-fakeit

./: .mcp.json  Cargo.toml  Makefile  README.md
.github/workflows/: MainDistributionPipeline.yml
src/: lib.rs
test/sql/: fakeit.test
