[package]
name = "fakeit"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "fakeit"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "1.4.2", features = ["vtab-loadable", "vscalar"] }
duckdb-loadable-macros = "0.1.11"
libduckdb-sys = { version = "1.4.2", features = ["loadable-extension"] }
fakeit = "1.3"
serde = { version = "1.0.28", features = ["derive"] }
serde_json = "1.0.145"
