[package]
name = "fakeit"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "fakeit"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { git = "https://github.com/duckdb/duckdb-rs", rev = "749cff7a72a7b7a77ac14a4a2c1e641624974c34", features = ["vtab-loadable", "vscalar"] }
duckdb-loadable-macros = "0.1.12"
libduckdb-sys = { git = "https://github.com/duckdb/duckdb-rs", rev = "749cff7a72a7b7a77ac14a4a2c1e641624974c34", features = ["loadable-extension"] }
fakeit = "1.3"
serde = { version = "1.0.28", features = ["derive"] }
serde_json = "1.0.145"
